--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,9 +7,8 @@
 <body>
 <h1>About</h1>
 <p>
-  This site is a sample project for the <strong>awesome</strong> Git tutorial <em>Learn Enough Git to Be Dangerous</em>
+  This site is a sample project for the <strong>awesome</strong> Git tutorial <em>Learn Enough™ Git to Be Dangerous</em>
 </p>
 
 </body>
 </html>
-=======
