--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,10 +6,8 @@
 </head>
 <body>
 <h1>hello, world</h1>
+<a href="about.html">About this banana</a>
 <p>Call me Ismael</p>
 <img src="images/breaching_whale.jpg">
 </body>
 </html>
-=======
-
->>>>>>> 3d219168ac6488e622d9d27b4a9dcc327d812011
