--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <h1>hello, world</h1>
 <a href="about.html">About this banana</a>
 <p>Call me Ismael</p>
-<img src="images/breaching_whale.jpg">
+<img src="images/breaching_whale.jpg" alt="Breaching Whale">
 </body>
 </html>
