--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <h1>hello, world</h1>
 <a href="about.html">About this banana</a>
 <p>Call me Ismael</p>
-<img src="images/breaching_whale.jpg" alt="Breaching Whale">
+<a href="https://www.flickr.com/photos/28883788@N04/10097824543"
+<img src="images/breaching_whale.jpg" alt="breaching whale">
+</a>
 </body>
 </html>
