--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <a href="about.html">About this banana</a>
 <p>Call me Ismael</p>
 <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
-<img src="images/breaching_whale.jpg" alt="breaching whale">
+<img src="images/polar_bear.jpg" alt="Polar bear">
 </a>
 </body>
 </html>
