--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>hello, world</h1>
 <a href="about.html">About this banana</a>
 <p>Call me Ismael</p>
-<a href="https://www.flickr.com/photos/28883788@N04/10097824543">
+<a href="https://www.flickr.com/photos/puliarfanita/22959238329">
 <img src="images/polar_bear.jpg" alt="Polar bear">
 </a>
 </body>
