--- a/about.html
+++ b/about.html
@@ -10,8 +10,9 @@
 <p>
   This site is a sample project for the <strong>awesome</strong> Git tutorial <em>Learn Enough™ Git to Be Dangerous</em>
 
-<a href="http://learnenough.com/git-tutorial"<em>Learn Enough™ Git to Be Dangerous</em></p>
+<a href="http://learnenough.com/git-tutorial"<em>Learn Enough™ Git to Be Dangerous</em>
 
+This is a <a href="index.html"> link back to the home page.
 </p>
 
 
