--- a/about.html
+++ b/about.html
@@ -10,9 +10,10 @@
 <p>
   This site is a sample project for the <strong>awesome</strong> Git tutorial <em>Learn Enough™ Git to Be Dangerous</em>
 
-<a href="http://learnenough.com/git-tutorial"<em>Learn Enough™ Git to Be Dangerous</em>
+<a href="http://learnenough.com/git-tutorial"<em>Learn Enough™ Git to Be Dangerous.</em>
+  <br>
 
-This is a <a href="index.html"> link back to the home page.
+<h2 align="center">This is a <a href="index.html"> link back to the home page.</h2>
 </p>
 
 
